--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -56,7 +56,9 @@
   "ticoblockchain2019": "Ticoblockchain 2019",
   "ticoblockchain2019Des": "First congress about blockchain in Costa Rica.",
   "ticoblockchain2021": "Ticoblockchain 2021",
+  "ticoblockchain2022": "Ticoblockchain 2022",
   "ticoblockchain2021Des": "Free seminars for financial entities in Costa Rica.",
+  "ticoblockchain2022Des": "Free seminars for financial entities in Costa Rica.",
   "titleFirtsNew": "Position of the Blockchain Association of Costa Rica regarding the proposal of taxes on crypto assets of the Ministry of Finance",
   "titleSecondNew": "The panorama in 2021 for blockchain and cryptocurrencies in Costa Rica",
   "titleThreeNew": "AsoBlockchain and the future of Blockchain in Costa Rica",
@@ -85,8 +87,8 @@
   "affiliate": "Affiliate:",
   "affiliateFirstPoint": "- Access to events of the organization is provided at a discount price, with you (but without a vote in decision-making)",
   "selectMembershipCategory": "Select your membership category",
-  "associateVoiceVotingRights": "Associate with Voice and Voting Rights - Annual Cost: $150",
-  "affiliateAnnualCost": "Affiliate - Annual Cost: $50",
+  "associateVoiceVotingRights": "Associate with Voice and Voting Rights - Annual Cost: US$150",
+  "affiliateAnnualCost": "Affiliate - Annual Cost: US$50",
   "professionOccupation": "Profession or Occupation",
   "reasonJoin": "Reason to join",
   "reasonJoinDes": "Please provide us with more details about your interest in the Association and the Blockchain / Crypto industry. If you are in industry please provide details and website (for membership clearance). If you are only interested in the industry, please indicate it.",
@@ -127,7 +129,7 @@
   "vocal2": "Vocal 2, Master in Computational Engineering,",
   "vocal2Ocupation": "Cryptocurrency Educator at CryptoReds",
   "vocal3": "Vocal 3, Master in Community Development,",
-  "voval3Ocupation": "General manager Satisfied Vagabonds LLC",
+  "voval3Ocupation": "Co-Founder of Cambiatus",
   "vocal4": "Vocal 4, MBA,",
   "vocal4Ocupation": "Chief Executive Officer Delimart",
   "vocal5": "Vocal 5, Master in Cryptocurrency,",
