--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -46,6 +46,7 @@
   "secondDocument": "¿Cómo invertir en proyectos cripto?",
   "accessOrganizationEvents": "Acceso a eventos de la organización.",
   "accessInformationAboutBlockchain": "Acceso a información sobre oportunidades y asesoría de blockchain en Costa Rica.",
+  "networkingBetweenBusinessmen": "Redes de contactos/Networking.",
   "websiteAnnouncementsIndustry": "Anuncios en el sitio web y apoyo en relaciones entre sectores.",
   "discountsActivitiesOrganized": "Descuentos en actividades organizadas por la asociación.",
   "accessAsoblockchainChat": "Acceso al chat de Asoblockchain.",
@@ -55,7 +56,9 @@
   "ticoblockchain2019": "Ticoblockchain 2019",
   "ticoblockchain2019Des": "Primer congreso de blockchain en Costa Rica.",
   "ticoblockchain2021": "Ticoblockchain 2021",
+  "ticoblockchain2022": "Ticoblockchain 2022",
   "ticoblockchain2021Des": "Seminarios gratuitos dirigidos a entidades financieras costarricenses.",
+  "ticoblockchain2022Des": "Seminarios gratuitos dirigidos a entidades financieras costarricenses.",
   "titleFirtsNew": "Posición de la Asociación Blockchain de Costa Rica con respecto a la propuesta de impuestos a criptoactivos del Ministerio de Hacienda",
   "titleSecondNew": "El panorama en el 2021 para blockchain y criptomonedas en Costa Rica",
   "titleThreeNew": "AsoBlockchain y el futuro de Blockchain en Costa Rica",
@@ -79,20 +82,28 @@
   "naturalPersonRegistration": "Registro Persona Física",
   "recordPersonal": "Este registro es personal. Porfavor seleccione su categoría de afiliación.",
   "associated": "Asociado:",
+  "associatedFirstPoint": "- Acceso a los eventos de la organización, voz y voto en la toma de decisiones.",
+  "associatedSecondPoint": "- Acceso a información sobre oportunidades en el área BLOCKCHAIN en Costa Rica. Consejos para aprovechar oportunidades en el área BLOCKCHAIN.",
   "affiliate": "Afiliado:",
   "affiliateFirstPoint": "- Se brinda acceso a eventos de la organización a precio de descuento, con voz (pero sin voto en la toma de decisiones)",
   "selectMembershipCategory": "Seleccione su categoría de afiliación",
-  "affiliateAnnualCost": "Afiliado - Costo Anual: $50",
+  "associateVoiceVotingRights": "Asociado con derecho a voz y voto - Costo anual: US$150",
+  "affiliateAnnualCost": "Afiliado - Costo Anual: US$50",
   "professionOccupation": "Profesión u Ocupación",
   "reasonJoin": "Motivo para Asociarse",
   "reasonJoinDes": "Por favor bríndenos mas detalles sobre su interés en la Asociación y la industria Blockchain / Crypto. Si se dedica a la industria por favor brinde detalles y sitio web (para autorización de membresía). Si solo tiene interés sobre la industria por favor indíquelo.",
   "legalEntityRegistration": "Registro Persona Jurídica",
   "registryCompaniesOrganizations": "Este registro es para empresas u organizaciones.",
   "profits": "Beneficios:",
+  "accessEventsOrganizationVoiceVote": "Acceso a los eventos de la organización, voz y voto en la toma de decisiones.",
   "discountActivitiesOrganizedASOBLOCKCHAIN": "Descuento de un 15% en actividades organizadas por ASOBLOCKCHAIN y un 7.5% de descuento para familiares de primer grado de consanguinidad.",
   "selectCompanyCategory": "Seleccione su categoría de Empresa. La membresía de empresa es de Asociado con Derecho a Voz y Voto.",
-  "company31+EmployeesPerYear": "Empresa de 31+ empleados - USD$1,200.00 anual",
+  "specialCostASOBLOCKCHAINWebsite": "Anuncios con costo especial en el sitio web de ASOBLOCKCHAIN.",
+  "accessPeopleCompanyAsoblockchainChat": " Acceso a 5 personas de la compania en el chat de whatsapp de la asociación.",
+  "company31+EmployeesPerYear": "Empresa de 31+ empleados - US$1,200.00 anual",
   "contactPerson": "Persona de contacto",
+  "companyEmployeesPerYear": "Compañía de 1 a 15 empleados - US$400.00 por año",
+  "company16to30EmployeesPerYear": "Compañía de 16 a 30 empleados - US$600.00 por año",
   "titlePosition": "Cargo / Puesto",
   "back": "Atrás",
   "next": "Siguiente",
@@ -117,7 +128,7 @@
   "vocal2": "Vocal 2, Máster en Ingeniería Computacional,",
   "vocal2Ocupation": "Educador de Criptomonedas en CryptoReds",
   "vocal3": "Vocal 3, Máster en Desarrollo Comunitario,",
-  "voval3Ocupation": "Gerente General Satisfied Vagabonds LLC",
+  "voval3Ocupation": "Co-Fundadora de Cambiatus",
   "vocal4": "Vocal 4, MBA,",
   "vocal4Ocupation": "Directora Ejecutiva Delimart",
   "vocal5": "Vocal 5, Máster en Criptomoneda,",
